--- a/app/templates/base.html
+++ b/app/templates/base.html
@@ -393,6 +393,8 @@
                             <i class="fas fa-chart-bar"></i> Aksjer
                         </a>
                         <ul class="dropdown-menu">
+                            <li><a class="dropdown-item" href="{{ url_for('stocks.index') }}"><i class="fas fa-chart-bar"></i> Oversikt</a></li>
+                            <li><hr class="dropdown-divider"></li>
                             <li><h6 class="dropdown-header">Markedsoversikt</h6></li>
                             <li><a class="dropdown-item" href="{{ url_for('analysis.market_overview') }}"><i class="fas fa-pie-chart"></i> Markedsoversikt</a></li>
                             <li><a class="dropdown-item" href="{{ url_for('analysis.oslo_overview') }}"><i class="fas fa-flag"></i> Oslo Børs Oversikt</a></li>
@@ -491,6 +493,22 @@
                             <li><hr class="dropdown-divider"></li>
                             <li><a class="dropdown-item" href="{{ url_for('portfolio.advanced') }}"><i class="fas fa-cogs"></i> Avansert portfolio</a></li>
                             <li><a class="dropdown-item" href="{{ url_for('advanced_analytics.index') }}"><i class="fas fa-robot"></i> ML Analytics</a></li>
+                        </ul>
+                    </li>
+                    <li class="nav-item dropdown">
+                        <a class="nav-link dropdown-toggle" href="{{ url_for('resources.index') }}" role="button" data-bs-toggle="dropdown">
+                            <i class="fas fa-graduation-cap"></i> Resources
+                        </a>
+                        <ul class="dropdown-menu">
+                            <li><a class="dropdown-item" href="{{ url_for('resources.index') }}"><i class="fas fa-graduation-cap"></i> Resources Oversikt</a></li>
+                            <li><hr class="dropdown-divider"></li>
+                            <li><a class="dropdown-item" href="{{ url_for('forum.index') }}"><i class="bi bi-chat-dots"></i> Forum</a></li>
+                            <li><a class="dropdown-item" href="{{ url_for('resources.learning_center') }}"><i class="fas fa-book"></i> Læringsenter</a></li>
+                            <li><a class="dropdown-item" href="{{ url_for('resources.guides') }}"><i class="fas fa-compass"></i> Guider</a></li>
+                            <li><a class="dropdown-item" href="{{ url_for('resources.tutorials') }}"><i class="fas fa-play-circle"></i> Tutorials</a></li>
+                            <li><hr class="dropdown-divider"></li>
+                            <li><a class="dropdown-item" href="{{ url_for('resources.documentation') }}"><i class="fas fa-file-alt"></i> Dokumentasjon</a></li>
+                            <li><a class="dropdown-item" href="{{ url_for('resources.api') }}"><i class="fas fa-code"></i> API</a></li>
                         </ul>
                     </li>
                     <li class="nav-item dropdown">
@@ -648,7 +666,6 @@
                     </form>
                 </div>
                 <div class="col-md-3">
-                    <h6>Læring & Guider</h6>
                     <div class="mb-2">
                         <a href="/investment-guides" class="text-light text-decoration-none">
                             <i class="bi bi-book-half me-1"></i>Investeringsguider
@@ -661,7 +678,6 @@
                     </div>
                 </div>
                 <div class="col-md-3">
-                    <h6>Om Aksjeradar</h6>
                     <div class="mb-2">
                         <a href="{{ url_for('main.about') }}" class="text-light text-decoration-none">
                             <i class="bi bi-info-circle me-1"></i>Om oss
